<resources>
    <string name="app_name">Czółko</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_fragment_label">Menu Fragment</string>
    <string name="play_fragment_label">Play Fragment</string>
    <string name="settings_fragment_label">Settigns Fragment</string>
    <string name="play">Graj</string>
    <string name="settings">Ustawienia</string>
    <string name="exit">Wyjdź</string>
    <string name="play_again">Jeszcze raz?</string>
    <string name="go_back">Wróć</string>
    <string name="go_next">Następny</string>
    <string name="good_answer">Dobrze!</string>
    <string name="skip_answer">Pomiń:/</string>
    <string name="get_ready">Przygotuj się!</string>
    <string name="save">Zapisz</string>
</resources>