<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayFragment"

    android:padding="5dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:height="100dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_go_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:height="100dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_play_again"
        android:layout_marginBottom="50dp"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_good_answer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.495"
        app:layout_constraintHeight_percent="1"
        android:text="@string/good_answer"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="0dp"
        app:backgroundTint="@color/white"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_bad_answer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.495"
        app:layout_constraintHeight_percent="1"
        android:text="@string/bad_answer"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="0dp"
        app:backgroundTint="@color/white"
        android:visibility="gone"/>

    <View
        android:id="@+id/view_separate_line"
        android:layout_width="2dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/black"
        android:visibility="gone"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="80sp"
        android:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/get_ready"
        android:textSize="60sp"
        android:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/go_next"
        android:textSize="80sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:cornerRadius="0dp"
        app:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>